# Atelier-Report-Dataviz

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  dashboard.py  pyproject.toml  requirements.txt
frontend/pages/: 1_🎯_Direction_CEO.py  2_💼_Responsable_Commercial.py  3_📦_Responsable_Produit.py
