[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.125.0",
    "numpy==1.26.3",
    "pandas==2.1.4",
    "pydantic==2.5.3",
    "uvicorn[standard]==0.27.0",
]

[dependency-groups]
dev = []
